add reference range to BioMarkerResult. add reference range parsing examples

--- a/docs/lab/results/result-formats.mdx
+++ b/docs/lab/results/result-formats.mdx
@@ -63,6 +63,7 @@ type: ResultType
 unit: str | None
 timestamp: datetime | None
 notes: str | None
+reference_range: str | None
 min_range_value: float | None
 max_range_value: float | None
 is_above_max_range: bool | None
