--- a/docs/api-reference/lab-testing/lab-report-parsing/post-lab-report-parser-job.mdx
+++ b/docs/api-reference/lab-testing/lab-report-parsing/post-lab-report-parser-job.mdx
@@ -3,6 +3,10 @@ title: "Create Lab Report Parser Job"
 openapi: "POST /lab_report/v1/parser/job"
 ---
 
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<FeatureBeta />
+
 Upload a lab report file (PDF, JPEG, or PNG) to create a parsing job. The job will extract lab results and match them to LOINC codes.
 
 <RequestExample>
