PSC booking improvements docs

--- a/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-availability.mdx
+++ b/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-availability.mdx
@@ -3,6 +3,25 @@ openapi: "POST /v3/order/psc/appointment/availability"
 title: "PSC Appointment Availability"
 ---
 
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+
+### Availability Cache
+
+<FeatureBeta />
+
+Junction keeps a fast Availability Cache next 21 days of availability information for all locations. Each
+location is refreshed every 5 minutes on average.
+
+When you specify the Allow Stale option, your request would be fulfilled directly by the Availability Cache, provided that:
+
+1. All locations you requested have a cache hit; and
+2. The cached information is reasonably fresh (i.e., less than 15 minutes stale).
+
+When a request cannot be fulfilled by the Availability Cache, it would be routed to the PSC
+Appointment Provider directly.
+
+
 <RequestExample>
 
 ```bash cURL
