add ranges and default values to async feature params

--- a/docs/lab/walk-in/psc-appointment-scheduling.mdx
+++ b/docs/lab/walk-in/psc-appointment-scheduling.mdx
@@ -176,7 +176,7 @@ Use idempotency keys to safely retry booking requests without risk of creating d
 
 When calling the [Book PSC Appointment](/api-reference/lab-testing/psc-schedulling/appointment-psc-booking) endpoint, Junction by default returns a 500 Internal Server Error if the PSC Appointment Provider fails to acknowledge the booking request.
 
-With Async Confirmation enabled, Junction waits synchronously for the provider to acknowledge the booking request, up to the sync confirmation timeout (`sync_confirmation_timeout_millisecond`).
+With Async Confirmation enabled, Junction waits synchronously for the provider to acknowledge the booking request, up to `sync_confirmation_timeout_millisecond` (default: 2.5s, range: 1–10s).
 
 * If an acknowledgement is received before the timeout, Junction creates a _reserved_ or _confirmed_ appointment immediately and returns it in the response.
 
@@ -184,7 +184,7 @@ With Async Confirmation enabled, Junction waits synchronously for the provider t
 
 #### Background retries
 
-If a pending appointment is created, Junction continues to retry the booking request with the PSC Appointment Provider in the background, up to the async confirmation timeout (`async_confirmation_timeout_millisecond`).
+If a pending appointment is created, Junction continues to retry the booking request with the PSC Appointment Provider in the background, up to `async_confirmation_timeout_millisecond` (default: 15min, range: 1min–48hr).
 
 * If an acknowledgement is received before the timeout, the appointment transitions to _reserved_ or _confirmed_ status.
 
