PSC booking improvements docs (#420)
Co-authored-by: Andy James <atjames.dev@gmail.com>

--- a/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-availability.mdx
+++ b/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-availability.mdx
@@ -3,6 +3,12 @@ openapi: "POST /v3/order/psc/appointment/availability"
 title: "PSC Appointment Availability"
 ---
 
+import FeatureBeta from '/snippets/feature-beta.mdx';
+
+<Tip>
+Use the `allow_stale` parameter for faster responses via the Availability Cache. This feature is currently in closed beta. See [PSC Appointment Scheduling](/lab/walk-in/psc-appointment-scheduling#availability-cache) for more info.
+</Tip>
+
 <RequestExample>
 
 ```bash cURL
