--- a/docs/lab/workflow/redraws.mdx
+++ b/docs/lab/workflow/redraws.mdx
@@ -23,7 +23,7 @@ An order transaction is created whenever a new `initial` order is created and a 
 - Order transactions have a `status` field, which can either be `active`, `completed` or `cancelled`
   - `active` - one or more orders belonging to the order transaction is in progress
   - `completed` - all expected lab work for this transaction is completed and no further updates are expected
-  - `cancelled` - the initial order has been cancelled (and there's no redraw order), or the redraw order has been cancelled
+  - `cancelled` - the initial order has been cancelled (and there's no redraw order), or both the initial and redraw orders have been cancelled
 
 - An order can only ever belong to one order transaction
 
@@ -31,13 +31,12 @@ An order transaction is created whenever a new `initial` order is created and a 
 
 If an `initial` order is eligible for a redraw, rather than transitioning the [low-level status](/lab/workflow/lab-test-lifecycle) of the order to `completed`, the order status is set to `redraw_available`.
 - At this point, a new order is created, with `origin` set to `redraw` and it is linked to the same order transaction as the `initial` order
-- The redraw order's `parent_id` field is also set to the ID of the initial order, providing direct lineage information
 
 ### Webhooks
 
 - A `labtest.order.updated` [webhook](/lab/walk-in/webhooks) will be sent for the `initial` order when it transitions to the `redraw_available` status
 - Additionally, `labtest.order.created` and `labtest.order.updated` [webhooks](/lab/walk-in/webhooks) will be sent for the `redraw` order, when it is created and transitions to the `requisition_created` status upon the requisition being processed
-- The `labtest.order.created` and `labtest.order.updated` webhook payloads will include origin, parent id and order transaction details (including a list of orders that belong to the transaction, ordered by ascending date of order creation) - see the example payload on the [webhooks](/lab/walk-in/webhooks) page for more details
+- The `labtest.order.created` and `labtest.order.updated` webhook payloads will include origin and order transaction details (including a list of orders that belong to the transaction, ordered by ascending date of order creation) - see the example payload on the [webhooks](/lab/walk-in/webhooks) page for more details
 - Ordering of webhooks delivery is not guaranteed and should not be relied upon
 
 ### Monitoring updates and completion
@@ -59,10 +58,11 @@ Responses for the following endpoints also include order transaction details:
 
 - `GET /v3/orders` - Get a list of filtered orders (including the ability to filter by order transaction ID)
 - `GET /v3/order/{order_id}` - Get an individual order
+- `GET /v3/order/{order_id}/result` - Get an individual order's results
 
 ## Key things to note
 
-- While `parent_id` links a redraw to its initial order, the order transaction should be used as the primary way to reason about all related orders. A workflow for monitoring redraws could be as follows:
+- The order transaction should be used as the primary way to reason about all related orders. A workflow for monitoring redraws could be as follows:
   - Save the order transaction ID associated with an order at the point of its creation
   - When processing order webhooks, if an initial order is in a `redraw_available` state, check the order transaction details in the payload to retrieve the order ID for the new redraw order
   - Monitor webhooks for the redraw order to get the latest updates
@@ -71,5 +71,5 @@ Responses for the following endpoints also include order transaction details:
 
 ## Integrating with Order Transactions
 
-We recommend that you store both the `order_id` and `order_transaction_id` when placing an order in Junction. This way, if you receive a webhook for an order that you have not seen in your system, you will be able to link it to its parent via the `order_transaction_id`. 
+We recommend that you store both the `order_id` and `order_transaction_id` when placing an order in Junction. This way, if you receive a webhook for an order that you have not seen in your system, you will be able to link it to the initial order via the `order_transaction_id`. 
 From there, you can always use the `order_transaction_id` directly to obtain results, ensuring you always get the complete set of results for a particular order transaction.
